Do not trigger spoken feedback updates from message center

Test: enable ChromeVox. Verify alerts are *not* spoken concerning ChromeVox being enabled. No need for that because ChromeVox already announces "ChromeVox (SpokenFeeedback) ready". Also, verify alerts *do* get spoken when plugging in a braille display. This is not a message center popup update, but a popup being created/shown.

Bug: 802305
Change-Id: I497578097583bfc0e64d62b04fd65578820cc315
Reviewed-on: https://chromium-review.googlesource.com/871519
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529971}
Former-commit-id: 220fe67a3a73a1da41dba996e5d5ef328dfaa632